[package]
name = "flexible-locks"
version = "0.1.0"
authors = ["Mike Hommey <mh@glandium.org>"]
license = "Apache-2.0/MIT"
description = "Flexible Locks"
repository = "https://github.com/glandium/flexible-locks"
readme = "README.md"
keywords = ["mutex"]

[dependencies]
flexible-locks_derive = { path = "flexible-locks_derive", version = "0.1" }
parking_lot = { version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.41", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["synchapi"] }

[features]
default = ["std"]
std = []
