[package]
name = "flexible-locks_derive"
version = "0.1.0"
authors = ["Mike Hommey <mh@glandium.org>"]
license = "Apache-2.0/MIT"
description = "Custom Derive for Flexible Locks"
repository = "https://github.com/glandium/flexible-locks"
readme = "README.md"
keywords = ["mutex", "derive"]

[dependencies]
syn = ">= 0.12, <0.14"
quote = ">=0.4, <0.6"

[lib]
proc-macro = true
